<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AdicionarCafeActivity"
    android:background="@color/mFraco">

    >


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="273dp"
        android:layout_height="258dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/cafe_java"
        android:contentDescription="@string/logo_do_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="153dp"
        android:layout_height="27dp"
        android:layout_marginTop="12dp"
        android:text="@string/cadastrar_caf"
        android:textStyle="bold"
        android:textColor="@color/mForte"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/nome_do_caf"
        android:textColor="@color/mForte"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editTextNome"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="72dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="56dp"
        android:text="@string/descri_o"
        android:textStyle="bold"
        android:textColor="@color/mForte"
        app:layout_constraintEnd_toStartOf="@+id/editTextDescricao"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextDescricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="72dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/black"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNome" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="54dp"
        android:layout_height="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="52dp"
        android:textStyle="bold"
        android:text="@string/valor"
        android:textColor="@color/mForte"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumberValor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextNumberValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="72dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescricao" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/cadastrar"
        android:backgroundTint="@color/mForte"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberValor"
        app:layout_constraintVertical_bias="0.056"
        />


</androidx.constraintlayout.widget.ConstraintLayout>


